--- a/BookLink/src/main/resources/application.properties
+++ b/BookLink/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.jpa.properties.hibernate.format_sql=true
 
 jwt.secret="secretKey"
 # real key -> in environment variable.
+
+kakao.key=58a848e037fa5a7cc6d9b27e27b55037
