--- a/BookLink/src/main/resources/application.properties
+++ b/BookLink/src/main/resources/application.properties
@@ -1,10 +1,9 @@
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/local_booklink?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://booklink-db.cy5nlxootwsx.ap-northeast-2.rds.amazonaws.com:3306/local_booklink
 spring.datasource.username=root
 spring.datasource.password=dbtjrz12#
 #spring.datasource.password=1234
-
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
