feat: OAuth2.0 카카오 소셜 로그인 token 받아오기 구현

--- a/BookLink/src/main/resources/application.properties
+++ b/BookLink/src/main/resources/application.properties
@@ -14,4 +14,19 @@ spring.jpa.properties.hibernate.format_sql=true
 jwt.secret="secretKey"
 # real key -> in environment variable.
 
-kakao.key=58a848e037fa5a7cc6d9b27e27b55037
+#kakao.key=58a848e037fa5a7cc6d9b27e27b55037
+
+spring.security.oauth2.client.registration.kakao.clientId= 58a848e037fa5a7cc6d9b27e27b55037
+spring.security.oauth2.client.registration.kakao.clientSecret= RJ7wsNnHAvGx72puAHlCIOc0Pkvw0Eck
+spring.security.oauth2.client.registration.kakao.clientAuthenticationMethod= post
+spring.security.oauth2.client.registration.kakao.authorizationGrantType= authorization_code
+spring.security.oauth2.client.registration.kakao.redirectUri= http://localhost:8080/login/oauth2/code/kakao
+spring.security.oauth2.client.registration.kakao.scope= profile_nickname, account_email, birthday
+spring.security.oauth2.client.registration.kakao.clientName= Kakao
+
+spring.security.oauth2.client.provider.authorizationUri= https://kauth.kakao.com/oauth/authorize
+spring.security.oauth2.client.provider.tokenUri= https://kauth.kakao.com/oauth/token
+spring.security.oauth2.client.provider.userInfoUri= https://kapi.kakao.com/v2/user/me
+spring.security.oauth2.client.provider.userNameAttribute= id
+
+
