--- a/BookLink/build.gradle
+++ b/BookLink/build.gradle
@@ -59,6 +59,7 @@ dependencies {
 	implementation group: 'org.json', name: 'json', version: '20230618'
 	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.15.2'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'com.google.code.gson:gson:2.8.7'
 
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.mysql:mysql-connector-j'
