--- a/BookLink/src/main/resources/application.properties
+++ b/BookLink/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.password=booklink1234
 #spring.datasource.username=root
 #spring.datasource.password=dbtjrz12#
 #spring.datasource.password=1234
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
