--- a/BookLink/src/main/resources/application.properties
+++ b/BookLink/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-jwt.secret="secretKey"
+jwt.secret="aalkdsfjladksfo3ij0ifjADAWRIw3r9jadeAWFJA0F"
 # real key -> in environment variable.?
 
 #kakao.key=58a848e037fa5a7cc6d9b27e27b55037
@@ -27,5 +27,3 @@ spring.security.oauth2.client.provider.kakao.authorization-uri= https://kauth.ka
 spring.security.oauth2.client.provider.kakao.token-uri= https://kauth.kakao.com/oauth/token
 spring.security.oauth2.client.provider.kakao.user-info-uri= https://kapi.kakao.com/v2/user/me
 spring.security.oauth2.client.provider.kakao.user-name-attribute= id
-
-
