--- a/BookLink/src/main/resources/application.properties
+++ b/BookLink/src/main/resources/application.properties
@@ -1,14 +1,16 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://booklink-db.cy5nlxootwsx.ap-northeast-2.rds.amazonaws.com:3306/booklink_db
+spring.datasource.url=jdbc:mysql://booklink-db.cy5nlxootwsx.ap-northeast-2.rds.amazonaws.com:3306/booklink_db?serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=admin
 spring.datasource.password=booklink1234
 #spring.datasource.url=jdbc:mysql://localhost:3306/local_booklink?serverTimezone=UTC&characterEncoding=UTF-8
 #spring.datasource.username=root
 #spring.datasource.password=dbtjrz12#
 #spring.datasource.password=1234
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
 jwt.secret="aalkdsfjladksfo3ij0ifjADAWRIw3r9jadeAWFJA0F"
 # real key -> in environment variable.?
