--- a/BookLink/.gitignore
+++ b/BookLink/.gitignore
@@ -37,5 +37,5 @@ out/
 .vscode/
 
 ### important ###
-application.properties
-email.properties
+main/resources/application.properties
+main/resources/email.properties
