--- a/BookLink/.gitignore
+++ b/BookLink/.gitignore
@@ -37,5 +37,5 @@ out/
 .vscode/
 
 ### important ###
-main/resources/application.properties
-main/resources/email.properties
+**/application.properties
+**/email.properties
