--- a/BookLink/.gitignore
+++ b/BookLink/.gitignore
@@ -37,5 +37,5 @@ out/
 .vscode/
 
 ### important ###
-**/application.properties
-**/email.properties
+#**/application.properties
+#**/email.properties
