--- a/BookLink/src/main/resources/application.properties
+++ b/BookLink/src/main/resources/application.properties
@@ -30,4 +30,4 @@ cloud.aws.region.static=ap-northeast-2
 cloud.aws.region.auto=false
 cloud.aws.stack.auto=false
 
-logging.level.com.amazonaws.util.EC2MetadataUtils=error
+#logging.level.com.amazonaws.util.EC2MetadataUtils=error
