build: 웹 소켓 관련 모듈 추가 및 충돌 모듈 주석

--- a/BookLink/src/main/resources/application.properties
+++ b/BookLink/src/main/resources/application.properties
@@ -31,3 +31,8 @@ cloud.aws.region.auto=false
 cloud.aws.stack.auto=false
 
 #logging.level.com.amazonaws.util.EC2MetadataUtils=error
+
+spring.devtools.livereload.enabled=true
+spring.devtools.restart.enabled=false
+spring.freemarker.cache=false
+spring.jackson.serialization.fail-on-empty-beans=false
