--- a/BookLink/build.gradle
+++ b/BookLink/build.gradle
@@ -71,8 +71,8 @@ dependencies {
 
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+//	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.12.1' // 충돌 체크
 //	implementation group: 'org.json', name: 'json', version: '20230618'
-	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.15.2'
 //	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	implementation 'com.google.code.gson:gson:2.10.1'
 //	implementation 'org.springframework.boot:spring-boot-starter-webflux'
