--- a/BookLink/src/main/resources/application.properties
+++ b/BookLink/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://booklink-db.cy5nlxootwsx.ap-northeast-2.rds.amazonaws.com:3306/booklink_db
-spring.datasource.username=admin
-spring.datasource.password=booklink1234
+spring.datasource.url=jdbc:mysql://booklink-db.cy5nlxootwsx.ap-northeast-2.rds.amazonaws.com:3306/
+spring.datasource.username=
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
