--- a/BookLink/src/main/resources/application.properties
+++ b/BookLink/src/main/resources/application.properties
@@ -24,8 +24,8 @@ jwt.secret="aalkdsfjladksfo3ij0ifjADAWRIw3r9jadeAWFJA0F"
 #spring.security.oauth2.client.provider.kakao.user-name-attribute= id
 
 cloud.aws.s3.bucket=booklink-bucket
-cloud.aws.credentials.access-key=AKIAT5HL4TXP7OP6NHUV
-cloud.aws.credentials.secret-key=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
+cloud.aws.credentials.access-key=
+cloud.aws.credentials.secret-key=
 cloud.aws.region.static=ap-northeast-2
 cloud.aws.region.auto=false
 cloud.aws.stack.auto=false
