--- a/BookLink/src/main/resources/email.properties
+++ b/BookLink/src/main/resources/email.properties
@@ -6,5 +6,5 @@ mail.smtp.socketFactory.fallback=false
 mail.smtp.port=465
 mail.smtp.socketFactory.port=465
 
-AdminMail.id = poweragain0215@gmail.com
-AdminMail.password = ybitlusdlqxlgmej
+AdminMail.id = 
+AdminMail.password = 
