--- a/BookLink/src/main/resources/application.properties
+++ b/BookLink/src/main/resources/application.properties
@@ -1,36 +1,20 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://booklink-db.cy5nlxootwsx.ap-northeast-2.rds.amazonaws.com:3306/booklink_db
-spring.datasource.username=admin
-spring.datasource.password=booklink1234
+spring.datasource.username=
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-jwt.secret="aalkdsfjladksfo3ij0ifjADAWRIw3r9jadeAWFJA0F"
-
-#kakao.key=58a848e037fa5a7cc6d9b27e27b55037
-
-#spring.security.oauth2.client.registration.kakao.client-id= 7f52ecc5d9d0b4e210555d30a8555791
-#spring.security.oauth2.client.registration.kakao.client-secret= uBhUfs9tmspn6HsH2Yz72GftLNpteTfI
-#spring.security.oauth2.client.registration.kakao.client-authentication-method= post
-#spring.security.oauth2.client.registration.kakao.authorization-grant-type= authorization_code
-#spring.security.oauth2.client.registration.kakao.redirect-uri=http://localhost:5173/auth
-#spring.security.oauth2.client.registration.kakao.scope= profile_nickname, profile_image, account_email
-#spring.security.oauth2.client.registration.kakao.client-name= Kakao
-
-#spring.security.oauth2.client.provider.kakao.authorization-uri= https://kauth.kakao.com/oauth/authorize
-#spring.security.oauth2.client.provider.kakao.token-uri= https://kauth.kakao.com/oauth/token
-#spring.security.oauth2.client.provider.kakao.user-info-uri= https://kapi.kakao.com/v2/user/me
-#spring.security.oauth2.client.provider.kakao.user-name-attribute= id
+jwt.secret=
+ 
 
 cloud.aws.s3.bucket=booklink-bucket
-cloud.aws.credentials.access-key=AKIAT5HL4TXP7OP6NHUV
-cloud.aws.credentials.secret-key=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
+cloud.aws.credentials.access-key=
+cloud.aws.credentials.secret-key=
 cloud.aws.region.static=ap-northeast-2
 cloud.aws.region.auto=false
 cloud.aws.stack.auto=false
-
-#logging.level.com.amazonaws.util.EC2MetadataUtils=error
 
 spring.devtools.livereload.enabled=true
 spring.devtools.restart.enabled=false
